# instance-centric-grasping

./: .gitignore  ICGNET_import.ipynb  LOCAL_INFERENCE_SETUP.md  README.md  icgnet_predict.ipynb  pyproject.toml  requirements.txt
icgnet_weights/: config.yaml
paper/: macros.tex  root.bbl  root.bib  root.tex
paper/tables/: ablation.tex  main_sim.tex  real_world.tex
scripts/: download_gazebo_models.py
scripts/patches/: icg_net.py
src/icgnet_main/: package.xml  setup.cfg  setup.py
src/icgnet_main/config/: icgnet_params.yaml
src/icgnet_main/config/moveit/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  panda.srdf
src/icgnet_main/icgnet_main/: direct_jtc_test.py  grasp_service_node.py  icgnet_inference.py  pointcloud_utils.py  scene_capture.py  spawn_object.py  spawn_one_entity.py  test_move_to_pose.py
src/icgnet_main/launch/: icgnet_inference.launch.py  move_group.launch.py  world.launch.py
src/icgnet_main/models/coke_can/: model.config  model.sdf
src/icgnet_main/worlds/: icgnet_table.world
src/panda_ros2_gazebo/config/: ros_control.yaml
src/panda_ros2_gazebo/description/models/panda/: panda.urdf
src/panda_ros2_gazebo/launch/: gazebo.launch.py  kinect.launch.py
src/panda_ros2_gazebo/rviz/: rviz.rviz
